# purl

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md  install.sh  purl.toml.example
.github/workflows/: ci.yml  release.yml
Formula/: purl.rb
cli/: Cargo.toml
cli/src/: balance_command.rs  cli.rs  colors.rs  config_commands.rs  errors.rs  exit_codes.rs  help_topics.rs  hyperlink.rs  inspect_command.rs  main.rs  network_commands.rs  output.rs  payment.rs  request.rs  table.rs  wallet_commands.rs
cli/src/inspect_command/: get_token_symbol_tests.rs
cli/tests/: balance_command_tests.rs  cli_tests.rs  config_command_tests.rs  constraint_tests.rs  wallet_command_tests.rs
cli/tests/common/: mod.rs
lib/: Cargo.toml
lib/src/: client.rs  config.rs  constants.rs  crypto.rs  error.rs  http.rs  lib.rs  negotiator.rs  network.rs  payment_provider.rs  permissions.rs  signer.rs
lib/src/keystore/: encrypt.rs  mod.rs
lib/src/protocol/: mod.rs  registry.rs  types.rs
lib/src/providers/: evm.rs  solana.rs
lib/src/x402/: mod.rs  protocol.rs
lib/tests/: config_tests.rs  payment_provider_tests.rs  x402_tests.rs
skills/: pay-for-http-request.md
