[workspace]
members = ["lib", "cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/stripe/purl"
homepage = "https://github.com/stripe/purl"
authors = ["Stripe"]

[workspace.dependencies]
curl = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.9"
alloy = { version = "1.2", features = ["full"] }
alloy-signer = "1.2"
alloy-signer-local = "1.2"
alloy-provider = "1.2"
alloy-transport-http = "1.2"
solana-sdk = "3.0"
solana-client = "3.1"
solana-program = "3.0"
solana-commitment-config = "3.1"
solana-compute-budget-interface = "3.0"
spl-token = { version = "9.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "10.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "8.0", features = ["no-entrypoint"] }
bs58 = "0.5"
bincode = "3.0"
hex = "0.4"
base64 = "0.22"
rand = "0.9"
rand_core = { version = "0.6", features = ["getrandom"] }
zeroize = { version = "1.8", features = ["derive"] }
eth-keystore = "0.5"
anyhow = "1.0"
thiserror = "2.0"
remain = "0.2"
dirs = "6.0"
once_cell = "1.21"
rpassword = "7.4"
tokio = { version = "1.49", features = ["full"] }
async-trait = "0.1"
sha3 = "0.10"
